--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
                 <td align="center">Click and Play 1</td>
                 <td><button onclick="MyAudio1">Play Audio</button></td>
             </tr>
-            <tr>
+            <tr bgcolor="yellow">
                 <td colspan="2" align="center">Song 2</td>
             </tr>
             <tr>
